[package]
name = "cmd-buttons"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
directories = "5"
chrono = "0.4"
nix = { version = "0.29", features = ["signal"] }
unicode-segmentation = "1"
